--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -35,17 +35,22 @@ jobs:
       - name: Testing Fedora Image
         run: |
           docker run --rm im-fedora27 -list configure
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 500 /imgs/test.jpg jxr:/imgs/test-jpg.jxr
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 100 /imgs/test.png /imgs/test-resize.png
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 100 /imgs/test.png webp:/imgs/test-png.webp
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 100 /imgs/test.png jxr:/imgs/test-png.jxr
-          docker run --rm -v $(pwd):/imgs im-fedora27 /imgs/test.pdf /imgs/test-pdf.png
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
-          docker run --rm -v $(pwd):/imgs im-fedora27 /imgs/test.jpg -antialias -font NimbusRoman-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
+          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 500 /imgs/test.jpg jxr:/imgs/test-jpg.jxr
+          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 100 /imgs/test.png /imgs/test-resize.png
+          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 100 /imgs/test.png jxr:/imgs/test-png.jxr
+          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 /imgs/test.pdf /imgs/test-pdf.png
+          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 /imgs/test.jpg -antialias -font NimbusRoman-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
           docker run --rm im-fedora27 -list configure | grep DELEGATES | grep "bzlib fontconfig freetype jng jpeg lcms lzma png ps raw tiff webp xml zlib"
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v3
+        with:
+          name: fedora27-tests
+          path: test-images
       - name: Push Fedora image
         id: docker_push_fedora
         if: ${{ github.event_name == 'release' }}
@@ -83,20 +88,25 @@ jobs:
       - name: Testing Debian Buster Image
         run: |
           docker run --rm im-buster -list configure
-          docker run --rm -v $(pwd):/imgs im-buster -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
-          docker run --rm -v $(pwd):/imgs im-buster -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
-          docker run --rm -v $(pwd):/imgs im-buster -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
-          docker run --rm -v $(pwd):/imgs im-buster -resize 100 /imgs/test.png /imgs/test-resize.png
-          docker run --rm -v $(pwd):/imgs im-buster -resize 100 /imgs/test.png webp:/imgs/test-png.webp
-          docker run --rm -v $(pwd):/imgs im-buster -resize 100 /imgs/test.png avif:/imgs/test-png.avif
-          docker run --rm -v $(pwd):/imgs im-buster /imgs/test.pdf /imgs/test-pdf.png
-          docker run --rm -v $(pwd):/imgs im-buster /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
-          docker run --rm -v $(pwd):/imgs im-buster /imgs/test.gif /imgs/test-gif.webp
-          docker run --rm -v $(pwd):/imgs im-buster -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
-          docker run --rm -v $(pwd):/imgs im-buster -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
-          docker run --rm -v $(pwd):/imgs im-buster -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
-          docker run --rm -v $(pwd):/imgs im-buster /imgs/test.jpg -antialias -font Helvetica-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
+          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 100 /imgs/test.png /imgs/test-resize.png
+          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 100 /imgs/test.png avif:/imgs/test-png.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-buster /imgs/test.pdf /imgs/test-pdf.png
+          docker run --rm -v $(pwd)/test-images:/imgs im-buster /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-buster /imgs/test.gif /imgs/test-gif.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-buster /imgs/test.jpg -antialias -font Helvetica-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
           docker run --rm im-buster -list configure | grep DELEGATES | grep "fontconfig freetype heic jbig jng jpeg lcms lzma png ps tiff webp x xml zlib"
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v3
+        with:
+          name: buster-tests
+          path: test-images
       - name: Push Debian Buster image
         id: docker_push_buster
         if: ${{ github.event_name == 'release' }}
@@ -134,20 +144,25 @@ jobs:
       - name: Testing Debian Bullseye Image
         run: |
           docker run --rm im-bullseye -list configure
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 100 /imgs/test.png /imgs/test-resize.png
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 100 /imgs/test.png webp:/imgs/test-png.webp
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 100 /imgs/test.png avif:/imgs/test-png.avif
-          docker run --rm -v $(pwd):/imgs im-bullseye /imgs/test.pdf /imgs/test-pdf.png
-          docker run --rm -v $(pwd):/imgs im-bullseye /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
-          docker run --rm -v $(pwd):/imgs im-bullseye /imgs/test.gif /imgs/test-gif.webp
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
-          docker run --rm -v $(pwd):/imgs im-bullseye /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+          docker run --rm -v $(pwd)/test-images:/imgs im-bullseye -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
+          docker run --rm -v $(pwd)/test-images:/imgs im-bullseye -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-bullseye -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-bullseye -resize 100 /imgs/test.png /imgs/test-resize.png
+          docker run --rm -v $(pwd)/test-images:/imgs im-bullseye -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-bullseye -resize 100 /imgs/test.png avif:/imgs/test-png.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-bullseye /imgs/test.pdf /imgs/test-pdf.png
+          docker run --rm -v $(pwd)/test-images:/imgs im-bullseye /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-bullseye /imgs/test.gif /imgs/test-gif.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-bullseye -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+          docker run --rm -v $(pwd)/test-images:/imgs im-bullseye -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-bullseye -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-bullseye /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
           docker run --rm im-bullseye -list configure | grep DELEGATES | grep "fontconfig freetype heic jbig jng jpeg lcms lzma png ps tiff webp x xml zlib"
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v3
+        with:
+          name: bullseye-tests
+          path: test-images
       - name: Push Debian Bullseye image
         id: docker_push_bullseye
         if: ${{ github.event_name == 'release' }}
@@ -185,20 +200,25 @@ jobs:
       - name: Testing Ubuntu Image
         run: |
           docker run --rm im-ubuntu -list configure
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 100 /imgs/test.png /imgs/test-resize.png
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 100 /imgs/test.png webp:/imgs/test-png.webp
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 100 /imgs/test.png avif:/imgs/test-png.avif
-          docker run --rm -v $(pwd):/imgs im-ubuntu /imgs/test.pdf /imgs/test-pdf.png
-          docker run --rm -v $(pwd):/imgs im-ubuntu /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
-          docker run --rm -v $(pwd):/imgs im-ubuntu /imgs/test.gif /imgs/test-gif.webp
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
-          docker run --rm -v $(pwd):/imgs im-ubuntu /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
+          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 100 /imgs/test.png /imgs/test-resize.png
+          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 100 /imgs/test.png avif:/imgs/test-png.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu /imgs/test.pdf /imgs/test-pdf.png
+          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu /imgs/test.gif /imgs/test-gif.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
           docker run --rm im-ubuntu -list configure | grep DELEGATES | grep "fontconfig freetype heic jbig jng jpeg lcms lzma png ps tiff webp x xml zlib"
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v3
+        with:
+          name: ubuntu-tests
+          path: test-images
       - name: Push Ubuntu image
         id: docker_push_ubuntu
         if: ${{ github.event_name == 'release' }}
