--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,110 +11,110 @@ on:
       - published
 
 jobs:
-  build-fedora:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup Docker
-        uses: ./.github/actions/setup-docker
-        with:
-          docker-user: ${{ secrets.DOCKERHUB_USERNAME }}
-          docker-password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build Fedora image
-        id: docker_build_fedora
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.fedora27
-          push: false
-          load: true
-          tags: im-fedora27
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-      - name: Testing Fedora Image
-        run: |
-          docker run --rm im-fedora27 -list configure
-          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
-          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 500 /imgs/test.jpg jxr:/imgs/test-jpg.jxr
-          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 100 /imgs/test.png /imgs/test-resize.png
-          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 100 /imgs/test.png webp:/imgs/test-png.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 100 /imgs/test.png jxr:/imgs/test-png.jxr
-          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 /imgs/test.pdf /imgs/test-pdf.png
-          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
-          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 /imgs/test.jpg -antialias -font NimbusRoman-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
-          docker run --rm im-fedora27 -list configure | grep DELEGATES | grep "bzlib fontconfig freetype jng jpeg lcms lzma png ps raw tiff webp xml zlib"
-      - name: Push Fedora image
-        id: docker_push_fedora
-        if: ${{ github.event_name == 'release' }}
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.fedora27
-          push: true
-          load: false
-          platforms: linux/amd64,linux/arm64
-          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-fedora27,dpokidov/imagemagick:latest-fedora27
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-  build-debian-buster:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup Docker
-        uses: ./.github/actions/setup-docker
-        with:
-          docker-user: ${{ secrets.DOCKERHUB_USERNAME }}
-          docker-password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build Debian Buster Image
-        id: docker_build_buster
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.buster
-          push: false
-          load: true
-          tags: im-buster
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-      - name: Testing Debian Buster Image
-        run: |
-          docker run --rm im-buster -list configure
-          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
-          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
-          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 100 /imgs/test.png /imgs/test-resize.png
-          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 100 /imgs/test.png webp:/imgs/test-png.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 100 /imgs/test.png avif:/imgs/test-png.avif
-          docker run --rm -v $(pwd)/test-images:/imgs im-buster /imgs/test.pdf /imgs/test-pdf.png
-          docker run --rm -v $(pwd)/test-images:/imgs im-buster /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-buster /imgs/test.gif /imgs/test-gif.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
-          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
-          docker run --rm -v $(pwd)/test-images:/imgs im-buster /imgs/test.jpg -antialias -font Helvetica-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
-          docker run --rm im-buster -list configure | grep DELEGATES | grep "fontconfig freetype heic jbig jng jpeg lcms lzma png ps tiff webp x xml zlib"
-      - name: Upload Test Results
-        uses: actions/upload-artifact@v3
-        with:
-          name: buster-tests
-          path: test-images
-      - name: Push Debian Buster image
-        id: docker_push_buster
-        if: ${{ github.event_name == 'release' }}
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.buster
-          push: true
-          load: false
-          platforms: linux/amd64,linux/arm64
-          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }},dpokidov/imagemagick:${{ github.event.release.tag_name }}-buster,dpokidov/imagemagick:latest-buster,dpokidov/imagemagick:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+#  build-fedora:
+#    runs-on: ubuntu-20.04
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#      - name: Setup Docker
+#        uses: ./.github/actions/setup-docker
+#        with:
+#          docker-user: ${{ secrets.DOCKERHUB_USERNAME }}
+#          docker-password: ${{ secrets.DOCKERHUB_TOKEN }}
+#      - name: Build Fedora image
+#        id: docker_build_fedora
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile.fedora27
+#          push: false
+#          load: true
+#          tags: im-fedora27
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache
+#      - name: Testing Fedora Image
+#        run: |
+#          docker run --rm im-fedora27 -list configure
+#          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
+#          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
+#          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 500 /imgs/test.jpg jxr:/imgs/test-jpg.jxr
+#          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 100 /imgs/test.png /imgs/test-resize.png
+#          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+#          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 100 /imgs/test.png jxr:/imgs/test-png.jxr
+#          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 /imgs/test.pdf /imgs/test-pdf.png
+#          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+#          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
+#          docker run --rm -v $(pwd)/test-images:/imgs im-fedora27 /imgs/test.jpg -antialias -font NimbusRoman-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+#          docker run --rm im-fedora27 -list configure | grep DELEGATES | grep "bzlib fontconfig freetype jng jpeg lcms lzma png ps raw tiff webp xml zlib"
+#      - name: Push Fedora image
+#        id: docker_push_fedora
+#        if: ${{ github.event_name == 'release' }}
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile.fedora27
+#          push: true
+#          load: false
+#          platforms: linux/amd64,linux/arm64
+#          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-fedora27,dpokidov/imagemagick:latest-fedora27
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache
+#  build-debian-buster:
+#    runs-on: ubuntu-20.04
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#      - name: Setup Docker
+#        uses: ./.github/actions/setup-docker
+#        with:
+#          docker-user: ${{ secrets.DOCKERHUB_USERNAME }}
+#          docker-password: ${{ secrets.DOCKERHUB_TOKEN }}
+#      - name: Build Debian Buster Image
+#        id: docker_build_buster
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile.buster
+#          push: false
+#          load: true
+#          tags: im-buster
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache
+#      - name: Testing Debian Buster Image
+#        run: |
+#          docker run --rm im-buster -list configure
+#          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
+#          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
+#          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
+#          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 100 /imgs/test.png /imgs/test-resize.png
+#          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+#          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 100 /imgs/test.png avif:/imgs/test-png.avif
+#          docker run --rm -v $(pwd)/test-images:/imgs im-buster /imgs/test.pdf /imgs/test-pdf.png
+#          docker run --rm -v $(pwd)/test-images:/imgs im-buster /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
+#          docker run --rm -v $(pwd)/test-images:/imgs im-buster /imgs/test.gif /imgs/test-gif.webp
+#          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+#          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
+#          docker run --rm -v $(pwd)/test-images:/imgs im-buster -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
+#          docker run --rm -v $(pwd)/test-images:/imgs im-buster /imgs/test.jpg -antialias -font Helvetica-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+#          docker run --rm im-buster -list configure | grep DELEGATES | grep "fontconfig freetype heic jbig jng jpeg lcms lzma png ps tiff webp x xml zlib"
+#      - name: Upload Test Results
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: buster-tests
+#          path: test-images
+#      - name: Push Debian Buster image
+#        id: docker_push_buster
+#        if: ${{ github.event_name == 'release' }}
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile.buster
+#          push: true
+#          load: false
+#          platforms: linux/amd64,linux/arm64
+#          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }},dpokidov/imagemagick:${{ github.event.release.tag_name }}-buster,dpokidov/imagemagick:latest-buster,dpokidov/imagemagick:latest
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache
   build-debian-bullseye:
     runs-on: ubuntu-20.04
     steps:
@@ -171,59 +171,59 @@ jobs:
           tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-bullseye,dpokidov/imagemagick:latest-bullseye
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
-  build-ubuntu:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup Docker
-        uses: ./.github/actions/setup-docker
-        with:
-          docker-user: ${{ secrets.DOCKERHUB_USERNAME }}
-          docker-password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build Ubuntu Image
-        id: docker_build_ubuntu
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.ubuntu
-          push: false
-          load: true
-          tags: im-ubuntu
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-      - name: Testing Ubuntu Image
-        run: |
-          docker run --rm im-ubuntu -list configure
-          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
-          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
-          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 100 /imgs/test.png /imgs/test-resize.png
-          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 100 /imgs/test.png webp:/imgs/test-png.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 100 /imgs/test.png avif:/imgs/test-png.avif
-          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu /imgs/test.pdf /imgs/test-pdf.png
-          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu /imgs/test.gif /imgs/test-gif.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
-          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
-          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
-          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
-          docker run --rm im-ubuntu -list configure | grep DELEGATES | grep "fontconfig freetype heic jbig jng jpeg lcms lzma png ps tiff webp x xml zlib"
-      - name: Upload Test Results
-        uses: actions/upload-artifact@v3
-        with:
-          name: ubuntu-tests
-          path: test-images
-      - name: Push Ubuntu image
-        id: docker_push_ubuntu
-        if: ${{ github.event_name == 'release' }}
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.ubuntu
-          push: true
-          load: false
-          platforms: linux/amd64,linux/arm64
-          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-ubuntu,dpokidov/imagemagick:latest-ubuntu
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+#  build-ubuntu:
+#    runs-on: ubuntu-20.04
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#      - name: Setup Docker
+#        uses: ./.github/actions/setup-docker
+#        with:
+#          docker-user: ${{ secrets.DOCKERHUB_USERNAME }}
+#          docker-password: ${{ secrets.DOCKERHUB_TOKEN }}
+#      - name: Build Ubuntu Image
+#        id: docker_build_ubuntu
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile.ubuntu
+#          push: false
+#          load: true
+#          tags: im-ubuntu
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache
+#      - name: Testing Ubuntu Image
+#        run: |
+#          docker run --rm im-ubuntu -list configure
+#          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
+#          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
+#          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
+#          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 100 /imgs/test.png /imgs/test-resize.png
+#          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+#          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 100 /imgs/test.png avif:/imgs/test-png.avif
+#          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu /imgs/test.pdf /imgs/test-pdf.png
+#          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
+#          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu /imgs/test.gif /imgs/test-gif.webp
+#          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+#          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
+#          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
+#          docker run --rm -v $(pwd)/test-images:/imgs im-ubuntu /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+#          docker run --rm im-ubuntu -list configure | grep DELEGATES | grep "fontconfig freetype heic jbig jng jpeg lcms lzma png ps tiff webp x xml zlib"
+#      - name: Upload Test Results
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: ubuntu-tests
+#          path: test-images
+#      - name: Push Ubuntu image
+#        id: docker_push_ubuntu
+#        if: ${{ github.event_name == 'release' }}
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile.ubuntu
+#          push: true
+#          load: false
+#          platforms: linux/amd64,linux/arm64
+#          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-ubuntu,dpokidov/imagemagick:latest-ubuntu
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache
