--- a/Dockerfile.bullseye
+++ b/Dockerfile.bullseye
@@ -18,7 +18,7 @@ RUN apt-get -y update && \
     # libwebp
     libsdl1.2-dev libgif-dev \
     # libjxl
-    libbrotli-dev && \
+    libbrotli-dev \
     # IM
     libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libgomp1 ghostscript libxml2-dev libxml2-utils libtiff-dev libfontconfig1-dev libfreetype6-dev fonts-dejavu liblcms2-2 liblcms2-dev \
     # Install manually to prevent deleting with -dev packages
