--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,8 +1,8 @@
-FROM ubuntu:focal
+FROM ubuntu:noble
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-ARG IM_VERSION=7.1.1-31
+ARG IM_VERSION=7.1.1-32
 ARG LIB_HEIF_VERSION=1.17.6
 ARG LIB_AOM_VERSION=3.9.0
 ARG LIB_WEBP_VERSION=1.4.0
