--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -182,6 +182,7 @@ jobs:
           push: false
           load: false
           platforms: linux/amd64,linux/arm64
-          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-ubuntu,dpokidov/imagemagick:latest-ubuntu
+          #tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-ubuntu,dpokidov/imagemagick:latest-ubuntu
+          tags: dpokidov/imagemagick:fix-ubuntu,dpokidov/imagemagick:latest-ubuntu
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
