--- a/.github/actions/setup-docker/action.yaml
+++ b/.github/actions/setup-docker/action.yaml
@@ -10,8 +10,8 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
+#    - name: Set up QEMU
+#      uses: docker/setup-qemu-action@v3
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
     - name: Login to DockerHub
